# image-processing

./: PictureProcessing.sln  README.md
ImageProcessing/: .gitignore  EncodingType.cs  ImageProcessing.csproj  ImageProcessingMiddleware.cs  Program.cs
ImageProcessing/Controllers/: ImageProcessingController.cs
ImageProcessing/Converters/: Base64Decoder.cs  HexDecoder.cs  IDecodeToByteArr.cs
ImageProcessing/Converters/ByteArrayToPixelArray/: BaseByteArrayPixelArrayConverter.cs  JpegConverter.cs  PngConverter.cs
ImageProcessing/Converters/EncodeToByteArray/: Base64Decoder.cs  HexDecoder.cs  IDecodeToByteArr.cs
ImageProcessing/Enums/: EncodingType.cs
ImageProcessing/Exceptions/: NotImageException.cs  NotSupportedEncodedTypeException.cs  NotSupportedFileFormat.cs
ImageProcessing/Middlewares/: ImageProcessingMiddleware.cs
ImageProcessing/Properties/: launchSettings.json
ImageProcessing/Services/: IImageProcessingService.cs  ImageProcessingService.cs
ImageProcessing/imagesettingcpp/: CMakeLists.txt  library.cpp  library.h
